[gd_scene load_steps=7 format=2]

[ext_resource path="res://igolka.gd" type="Script" id=1]
[ext_resource path="res://игла+игольница.png" type="Texture" id=2]
[ext_resource path="res://игла+игольница_подсветка.png" type="Texture" id=3]
[ext_resource path="res://.import/стандартный звук 3.wav-e370aecf2f8802a6da9e8be6e1bf1a80.sample" type="AudioStream" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 103.62, 52.807 )

[node name="igolka" type="Area2D"]
script = ExtResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="igSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
[connection signal="input_event" from="." to="." method="_on_igolka_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_igolka_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_igolka_mouse_exited"]
